<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:title="@string/app_menu1"
        app:showAsAction="ifRoom|withText"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/app_bar_swap"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_swap_horiz_24"
        android:title="@string/app_menu2" />

    <item
        android:id="@+id/app_bar_vert"
        android:title="@string/app_menu3"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_more_vert_24">

        <menu>
            <item android:id="@+id/menuItem_Delete"
                app:showAsAction="ifRoom"
                android:title="@string/app_menu3_item1"/>

            <item android:id="@+id/menuItem_Order"
                app:showAsAction="ifRoom"
                android:title="@string/app_menu3_item2"/>

        </menu>

    </item>

</menu>