<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskTypes_frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.msu.todolist.Fragments.Fragment_TaskTypes">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/ttype_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/selected_Color"
                android:text="@string/fragment_Ttype_1" />

            <Button
                android:id="@+id/ttype_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/unselected_Color"
                android:text="@string/fragment_Ttype_2" />

            <Button
                android:id="@+id/ttype_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/unselected_Color"
                android:text="@string/fragment_Ttype_3" />

            <Button
                android:id="@+id/ttype_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/unselected_Color"
                android:text="@string/fragment_Ttype_4" />

            <Button
                android:id="@+id/ttype_button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/unselected_Color"
                android:text="@string/fragment_Ttype_5" />

            <Button
                android:id="@+id/ttype_button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/unselected_Color"
                android:text="@string/fragment_Ttype_6" />

        </LinearLayout>
    </HorizontalScrollView>

</FrameLayout>